fix gap

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -97,6 +97,7 @@ button
             max-width: 340px
             @media screen and ( max-width: 1160px )
                 max-width: 280px
+                font-size: 3.6rem
             font-size: 4.1rem
             line-height: 1.4
             text-transform: uppercase
