--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -11,7 +11,7 @@
         flex-direction: column
         align-content: space-between
         height: 1280px
-        gap: 5.5rem
+        gap: 2.5rem
         @media screen and ( max-width: 1160px ) 
             height: 1500px
         @media screen and ( max-width: 920px )
@@ -21,7 +21,7 @@
 
 .text-block
     font-size: 1.6rem
-    max-width: 48%
+    max-width: 47%
     @media screen and ( max-width: 920px )
         max-width: none 
         width: 420px
